# NEXT-FORGE-sim2real

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_INTEGRATION_SUMMARY.md  Dockerfile  GITHUB_SETUP.md  LICENSE  PROJECT_COMPLETION.md  PROJECT_STRUCTURE.md  QUICKSTART_DOCKER.md  QUICKSTART_HARDWARE_BRIDGE.md  README.md  docker-compose.yml  docker_manager.bat  docker_manager.sh
.github/workflows/: docker-build.yml  tests.yml
docs/: DOCKER_GUIDE.md
launch/: play_test_recording_launch.py
src/board_description/urdf/: task_board.xml
src/board_hardware_bridge/: README.md  package.xml  setup.cfg  setup.py
src/board_hardware_bridge/board_hardware_bridge/: __init__.py  hardware_bridge.py  sim_hardware_adapter.py
src/board_hardware_bridge/board_hardware_bridge/config/: default_bridge_config.json
src/board_hardware_bridge/docs/: HARDWARE_INTEGRATION.md
src/board_hardware_bridge/examples/: example_client.py
src/board_hardware_bridge/launch/: complete_simulation_with_bridge_launch.py  hardware_bridge_launch.py  simulation_bridge_launch.py
src/board_hardware_bridge/scripts/: bridge_utils.py
src/board_hardware_bridge/test/: test_copyright.py  test_pep257.py
src/board_mujoco_sim/: README.md  package.xml  setup.cfg  setup.py
src/board_mujoco_sim/board_mujoco_sim/: __init__.py  mujoco_simulator.py  mujoco_visualizer.py  test_model.py
src/board_mujoco_sim/docs/: MUJOCO_INTEGRATION_GUIDE.md  URDF_TO_MUJOCO_CONVERSION.md
src/board_mujoco_sim/launch/: mujoco_complete_launch.py  mujoco_simulator_launch.py  mujoco_visualizer_launch.py
src/board_mujoco_sim/test/: test_flake8.py
src/board_recorder/: setup.py
src/board_webots_sim/launch/: task_board_launch.py
src/board_webots_sim/resource/: task_board.urdf
